# Solvency

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: desktop-build.yml  docker-publish.yml
issues/closed/: add-accounts.md  alerts-htmx.md  analytics-recurring-expenses.md  caching.md  code-review-01-deterministic-session-token.md  code-review-02-arbitrary-sql-via-import.md  code-review-05-no-db-transactions.md  code-review-07-dashboard-analytics-query-waste.md  code-review-09-code-duplication.md  code-review.md  database-export.md  dry-analytics-duplication.md  dry-filter-params-duplication.md  dry-settings-fetch-pattern.md  error-handling-template-unwrap.md  flow-mobile.md  form-input-consistency.md  icon-handling.md  inactive-accounts.md  init.md  keyboard-shortcuts.md  logout.md  market-data.md  mobile-sidebar-focus-management.md  pasword.md  performance-db-connection-per-row.md  performance-n-plus-1-expense-tags.md  position-detail-redesign-header.md  pwa.md  redesign-button-group-delete-all-styling.md  redesign-button-group-import-fragility.md  redesign-button-group-minor-ux.md  redesign-button-group-mobile-overflow.md  reorder-sidebar-items.md  replace-alert-with-toast.md  security-xsrf.md  security-xss-raw-html-response.md  sidebar-on-tablets.md  tests-csv-parser-edge-cases.md  update-seed-db.md  (+2 more)
issues/new/: achievements.md  alerts-htmx.md  all-assets.md  analytics-counterparty.md  analytics-dividend-income.md  analytics-recurring-expenses.md  analytics-savings-rate.md  analytics-spending-anomalies.md  askama-macros.md  chart-accessibility.md  clone-category.md  code-review-03-static-xsrf-token.md  code-review-04-silent-db-error-swallowing.md  code-review-06-negative-subcent-display-bug.md  code-review-08-session-cookie-hardening.md  code-review-10-unreadable-tuple-types.md  currency-conversion.md  delete-undo-pattern.md  error-handling-template-unwrap.md  financial-vocabulary.md  handle-splits.md  incomplete-price-history.md  integration-tests.md  leverage-ai.md  loading-feedback.md  mobile-layout-manage.md  negative-total-balance.md  net-worth-allocation.md  net-worth-redesign-chart-card-wrapper.md  net-worth-redesign-chart-emotional-resonance.md  net-worth-redesign-expenses-animation.md  net-worth-redesign-loading-state.md  net-worth-redesign-remove-subtitle.md  no-modal-edit.md  pasword.md  performance-analytics-aggregation.md  position-detail-redesign-chart-context.md  position-detail-redesign-chart-wrapper.md  position-detail-redesign-minor-polish.md  position-detail-redesign-stats-hierarchy.md  (+12 more)
migrations/: 001_initial.sql  002_import_sessions.sql  002_tags_style_and_rules.sql  003_transaction_details.sql  004_trading.sql  005_market_data.sql  006_api_logs.sql  007_symbol_metadata.sql  008_accounts.sql  009_split_adjustments.sql  010_account_active.sql  011_ai_categorization.sql  011_retirement_scenarios.sql
scripts/: build-ts.js  build.sh  bump-version.sh  copy-static.js  generate-icons.js  hash-css.js  make_collage.py  make_gallery.py  make_hero.py  seed-db.py  sloccount.sh  take_fullscreen_screenshots.py  take_list_screenshots.py  take_screenshots.py
src/: auth.rs  cache.rs  config.rs  date_utils.rs  error.rs  error_pages.rs  filters.rs  form_utils.rs  lib.rs  main.rs  server.rs  sort_utils.rs  state.rs  xsrf.rs
src-frontend/: service-worker.js
src-frontend/css/: input.css
src-frontend/ts/: api-log-polling.ts  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
static/: manifest.json  service-worker.js
templates/: base.html
tests/: analytics_test.rs  auth_test.rs  balances_test.rs  cache_test.rs  db_backup_test.rs  import_test.rs  integration_tests.rs  misc_test.rs  positions_test.rs  retirement_test.rs  split_test.rs  transactions_test.rs
(+162 files in other folders)
