[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "solvency"
version = "0.4.0"
edition = "2021"
rust-version = "1.92"
description = "A web-based expense tracker with a focus on visualizing spending habits"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "trace"] }

# Templates
askama = "0.15"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV parsing
csv = "1.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Market data
yahoo_finance_api = "2"
time = "0.3"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Pattern matching
regex = "1"

# URL encoding
urlencoding = "2"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Configuration
dotenvy = "0.15"

# Password hashing
argon2 = "0.5"

# Session cookies
tower-cookies = "0.10"

# Icons (generated at compile time)
phf = "0.11"

[build-dependencies]
phf_codegen = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
