[package]
name = "solvency-desktop"
version = "0.1.1"
edition = "2021"
rust-version = "1.92"
description = "Solvency desktop application"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.7"
http = "1"
solvency = { path = ".." }
tauri = { version = "2.10", features = [] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
